# ACRO

./: .buildinfo  .codecov.yml  .gitignore  .pre-commit-config.yaml  AI_POLICY.md  Acro README.MD  CHANGELOG.md  CITATION.cff  CNAME  CONTRIBUTING.md  Central-README  Central-README.md  Central-Read.me  README.md  acro.R  acro.html  acro_r.html  api.html  changelog-ci-config.yaml  changelog-ci.yaml  cliff.toml  examples.html  faq.html  foo.txt  genindex.html  index.html  installation.html  introduction.html  notebook_examples.html  objects.inv  py-modindex.html  pyproject.toml  r_test_charity.xlsx  record.html  requirements.txt  results.json  sacro_ml.html  sacro_viewer.html  search.html  searchindex.js  (+11 more)
.doctrees/: acro.doctree  acro_r.doctree  api.doctree  environment.pickle  examples.doctree  faq.doctree  index.doctree  installation.doctree  introduction.doctree  notebook_examples.doctree  record.doctree  sacro_ml.doctree  sacro_viewer.doctree  support.doctree  user_guide.doctree
.doctrees/api/: acro_class.doctree  records_class.doctree
.doctrees/examples/: configuration.doctree  quickstart.doctree
.doctrees/notebooks/: acro_demo.doctree  acro_demo_2026.doctree  acro_demo_v2.doctree  test-nursery.doctree  test.doctree
.doctrees/user_guide/: configuration.doctree  core_concepts.doctree  getting_started.doctree
.github/ISSUE_TEMPLATE/: documentation-request.md
.github/scripts/: reformat_changelog.py
.github/workflows/: changelog-ci.yml  lint.yml  lint_test.yaml  pypi.yml  sphinx-docs.yaml  test.yml  tests.yml  tests_python312.yml  tests_python313.yml
_modules/: index.html
_modules/acro/: acro.html  record.html  utils.html
_sources/: acro.rst.txt  acro_r.rst.txt  api.rst.txt  faq.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  notebook_examples.rst.txt  sacro_ml.rst.txt  user_guide.rst.txt
_sources/api/: acro_class.rst.txt  records_class.rst.txt
_sources/auto_examples/: index.rst.txt
_sources/notebooks/: acro_demo_2026.ipynb.txt
_sources/user_guide/: configuration.rst.txt  core_concepts.rst.txt
_static/: test-nursery.nb.html  test.nb.html
acro/: __init__.py  acro.py  acro_regression.py  acro_stata_parser.py  acro_tables.py  acro_v1_design_brief-updated.md  acro_v1_design_brief.md  aggregationfunctions.py  analyses.json  checks.json  checks.py  constants.py  default.yaml  ontology_handler.py  record.py  risks.json  safe_crosstab.py  safe_setup.py  sdc_agg_funcs.py  sdcchecks.py  stata_config.py  statbarns.json  table_utils.py  tablemodeldetails.py  utils.py  version.py
api/: acro_class.html  records_class.html
auto_examples/: index.html
conda/: README.md
data/: nursery_dataset.dta  test_data.dta
docs/: ACRO_For_Researchers.md  overview.dio  overview2.dio  overview3.dio  overview3.drawio  overview4.dio  requirements.txt
docs/source/: acro.rst  acro_r.rst  api.rst  conf.py  examples.rst  faq.rst  index.rst  installation.rst  introduction.rst  notebook_examples.rst  record.rst  sacro_ml.rst  sacro_viewer.rst  support.rst  user_guide.rst
examples/: configuration.html  quickstart.html  test.py
notebooks/: XandY.jfif  acro_demo.html  acro_demo.ipynb  acro_demo.py  acro_demo_2026.html  acro_demo_2026.ipynb  acro_demo_2026.py  acro_demo_v2.html  acro_demo_v2.ipynb  acro_demo_v2.py  r_test.xlsx  r_test_nursery.xlsx  results.json  test-nursery.Rmd  test-nursery.html  test-nursery.ipynb  test-nursery.nb.html  test-nursery.py  test-p-percent-example.ipynb  test-regression.ipynb  test.Rmd  test.html  test.ipynb  test_results.json  test_results.xlsm  test_results.xlsx
notebooks/my_acro_outputs_v1/:  crosstab_recommendation_vs_parents_0.csv  config.json  mean_children_by_parents_finance_recommendation_0.csv  results.json
notebooks/old/: acro_demo.html  acro_demo_v2.html  acro_demo_v2.ipynb  test-nursery.Rmd  test-nursery.html  test.Rmd
outputs/: output_0.csv  output_1.csv  output_2.csv  output_3.csv  output_5.csv  output_6.csv  output_7.csv  output_8.csv  results.json  test.json  test_results.json
scripts/: generate_changelog.sh
stata/: Stata_Commands_supported.md  acro.ado  acro_demo_2026.do  acro_demo_2026.smcl  acro_parser.py  acro_stata_parser.py  acro_unfixed-stata18.ado  contents.csv  fake-stata-acro_ado.ipynb  readme.md  setup_py.do  stata17_acro_nursery.do  stata_acro_nursery.do  stata_acro_test.do  stata_outs.html  test2.do  test_file_full.do  test_file_small.do  test_stata_acro_ado.ipynb
stata/outputs/: output_0_2023-06-15-15084596.csv  output_0_2023-06-18-19254748.csv  output_0_2023-06-19-08472116.csv  output_0_2023-06-19-08490329.csv  output_1_2023-06-15-15020092.csv  output_1_2023-06-15-15072890.csv  output_1_2023-06-15-15084606.csv  output_1_2023-06-18-19260266.csv  output_1_2023-06-18-19295761.csv  output_1_2023-06-18-19303662.csv  output_1_2023-06-18-19312336.csv  output_1_2023-06-18-19322118.csv  output_1_2023-06-19-08465367.csv  output_1_2023-06-19-08472134.csv  output_1_2023-06-19-08490342.csv  output_2_2023-06-15-15020163.csv  output_2_2023-06-15-15072963.csv  output_2_2023-06-15-15084678.csv  output_2_2023-06-18-19263269.csv  output_2_2023-06-18-19295848.csv  output_2_2023-06-18-19303667.csv  output_2_2023-06-18-19312410.csv  output_2_2023-06-18-19322195.csv  output_2_2023-06-19-08465371.csv  output_2_2023-06-19-08472208.csv  output_2_2023-06-19-08490416.csv  output_3_2023-06-18-19290393.csv  stata_out.json
stata/various_stata_development__files/: acro-v1-noparsing.ado  acro1.ado  acro2.ado  acro_crosstab.ado  acro_parser-v1-no-stata-parsing.py  contents.csv  extract_parameter.ado  test.do  (+5 more)
test/: conftest.py  results.xlsx  stata-test.py  stata.py  stata_test.py  test_federated.py  test_initial.py  test_ontology-driven.py  test_ontology_driven.py  test_ontology_handling.py  test_plots.py  test_regressions.py  test_results.xlsx  test_sdc_agg_funcs.py  test_sdcchecks.py  test_session_management.py  test_stata17_interface.py  test_stata_interface.py  test_table_model_details.py  test_table_utils.py  test_tables.py  test_utils.py
user_guide/: configuration.html  core_concepts.html  getting_started.html
(+100 files in other folders)
