[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "acro"
dynamic = ["version"]
description = "ACRO: Tools for the Semi-Automatic Checking of Research Outputs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
maintainers = [
    {name = "Jim Smith", email = "james.smith@uwe.ac.uk"}
]
keywords = [
    "data-privacy",
    "data-protection",
    "privacy",
    "privacy-tools",
    "statistical-disclosure-control",
    "statistical-software",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
]
dependencies = [
    "lxml",
    "matplotlib",
    "numpy",
    "openpyxl",
    "pandas<=2.3.3",
    "PyYAML",
    "statsmodels",
    "rdflib",
]

[tool.setuptools.dynamic]
version = {attr = "acro.version.__version__"}

[project.urls]
"Homepage" = "https://github.com/AI-SDC/ACRO"
"Changelog" = "https://github.com/AI-SDC/ACRO/CHANGELOG.md"
"Documentation" = "https://ai-sdc.github.io/ACRO/"
"Bug Tracker" = "https://github.com/AI-SDC/ACRO/issues"
"Discussions" = "https://github.com/AI-SDC/ACRO/discussions"

[project.optional-dependencies]
doc = [
    "numpydoc",
    "pytest",
    "sphinx-autopackagesummary",
    "sphinx-gallery",
    "sphinx-issues",
    "sphinx-prompt",
    "sphinx-rtd-theme",
    "sphinx>=4.0.0",
    "numpydoc",
    "sphinx-issues",
    "sphinx-prompt",
    "pydata-sphinx-theme",
    "sphinx-design",
    "nbsphinx>=0.8.0",
    "ipykernel",
    "jupyter",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
zip-safe = false
include-package-data = true
packages = {find = {exclude = ["data*", "docs*", "notebooks*", "test*"]}}

[tool.setuptools.package-data]
"acro" = ["default.yaml"]

[tool.ruff]
line-length = 88
target-version = "py310"

select = [
  "ANN", # flake8-annotations
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "C90", # mccabe
  "D",   # pydocstyle
  "DTZ", # flake8-datetimez
  "E",   # pycodestyle
  "EM",  # flake8-errmsg
#  "ERA", # eradicate — 42 violations across tests/notebooks/source; cleanup follow-up
  "F",   # Pyflakes
  "I",   # isort
  "ICN",  # flake8-import-conventions
  "N",   # pep8-naming
  "PD",  # pandas-vet
  "PGH", # pygrep-hooks
  "PIE",  # flake8-pie
#  "PL",  # Pylint (use PLC/PLE/PLR/PLW individually)
  "PLC", # Pylint
  "PLE", # Pylint
  "PLR", # Pylint
  "PLW", # Pylint
  "PT",  # flake8-pytest-style
  "Q",   # flake8-quotes
  "RET", # flake8-return
  "RUF100",  # Ruff-specific
  "S",   # flake8-bandit
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "TID", # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",   # pycodestyle
  "YTT",  # flake8-2020
]

exclude = [
  "__init__.py",
  "stata/*",
]

ignore = [
  "ANN401",  # dynamically typed Any
  "E501",    # line too long — enforced by ruff formatter, redundant in linter
  "PD009",   # .iat vs .iloc — .iat is intentional for scalar access
  "PD010",   # .unstack vs .pivot_table — style preference
  "PD013",   # .stack vs .melt — style preference
  "PLR2004", # magic value comparison — ubiquitous in tests and parser constants
  "RET504",  # unnecessary assignment before return — aids readability/debugging
  "S101",    # assert usage — standard in tests and production invariant checks
  "S301",    # unsafe pickle — used intentionally in this project
]

extend-ignore = [
  "ANN001",  # missing argument type annotation - style preference
  "ANN101",  # missing self type annotation - style preference
  "ANN201",  # missing return type annotation - style preference
  "T201",    # print statements - used in debugging
  "C901",    # function too complex - existing code
  "C417",    # unnecessary map - existing code
  "EM101",   # exception string literal - existing code
  "EM102",   # exception f-string literal - existing code
  "B026",    # star-arg unpacking - existing code
  "PLR0912", # too many branches - existing code
  "PLR0913", # too many arguments - existing code
  "PLW2901", # for loop variable overwritten - acceptable pattern
  "PLC1901", # comparison to empty string - acceptable pattern
  "S506",    # unsafe loader - intentional in yaml.load
  "DTZ005",  # datetime.now without tz - acceptable
  "PD002",   # inplace=True - acceptable for existing code
  "PD011",   # .values vs .to_numpy() - acceptable for existing code
  "PD901",   # bad variable name (df) - existing code
  "E402",    # module level imports not at top - acceptable for notebooks
  "SIM102",  # combine if statements - existing code
  "SIM118",  # use in dict instead of in dict.keys() - minor
  "SIM210",  # use bool() instead of if-else - minor
  "ARG001",  # unused argument - acceptable for override methods
  "PT001",   # pytest style - acceptable
  "PD003",   # pandas style - acceptable
]

[tool.ruff.pylint]
max-args = 12
max-returns = 10

[tool.ruff.pep8-naming]
ignore-names = ["X", "X_train", "X_predict"]

[tool.ruff.pydocstyle]
convention = "numpy"

# Format configuration - disabled for ruff 0.0.272 compatibility
# [tool.ruff.format]
# docstring-code-format = true
# docstring-code-line-length = 20

[tool.pylint]
master.py-version = "3.10"
reports.output-format = "colorized"

[tool.pylint.messages_control]
enable = [
    "useless-suppression",
]

disable = [
    "too-many-positional-arguments",
]

[tool.pylint.design]
max-args = 5  # Maximum number of arguments for function / method (see R0913).
max-attributes = 7  # Maximum number of attributes for a class (see R0902).
max-branches = 12  # Maximum number of branch for function / method body (see R0912).
max-locals = 15  # Maximum number of parents for a class (see R0914).
max-parents = 7  # Maximum number of parents for a class (see R0901).
max-public-methods = 20  # Maximum number of public methods for a class (see R0904).
max-returns = 6  # Maximum number of return / yield for function / method body (see R0911).
max-statements = 50  # Maximum number of statements in function / method body (see R0915).
min-public-methods = 2  # Minimum number of public methods for a class (see R0903).

[tool.pylint.format]
max-line-length = 100  # Maximum number of characters on a single line.
max-module-lines = 1000  # Maximum number of lines in a module.

[tool.mypy]
python_version = "3.10"
#exclude = "docs/source/conf.py"
#strict = false
#warn_unreachable = true
#ignore_missing_imports = true
#follow_imports = false
#disallow_untyped_defs = false
#disallow_untyped_calls = false
