[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "acro"
dynamic = ["version"]
description = "ACRO: Tools for the Semi-Automatic Checking of Research Outputs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
maintainers = [
    {name = "Jim Smith", email = "james.smith@uwe.ac.uk"}
]
keywords = [
    "data-privacy",
    "data-protection",
    "privacy",
    "privacy-tools",
    "statistical-disclosure-control",
    "statistical-software",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
]
dependencies = [
    "lxml",
    "matplotlib",
    "numpy",
    "openpyxl",
    "pandas<=2.3.3",
    "PyYAML",
    "statsmodels",
]

[tool.setuptools.dynamic]
version = {attr = "acro.version.__version__"}

[project.urls]
"Homepage" = "https://github.com/AI-SDC/ACRO"
"Changelog" = "https://github.com/AI-SDC/ACRO/CHANGELOG.md"
"Documentation" = "https://ai-sdc.github.io/ACRO/"
"Bug Tracker" = "https://github.com/AI-SDC/ACRO/issues"
"Discussions" = "https://github.com/AI-SDC/ACRO/discussions"

[project.optional-dependencies]
doc = [
    "numpydoc",
    "pytest",
    "sphinx-autopackagesummary",
    "sphinx-gallery",
    "sphinx-issues",
    "sphinx-prompt",
    "sphinx-rtd-theme",
    "sphinx>=4.0.0",
    "numpydoc",
    "sphinx-issues",
    "sphinx-prompt",
    "pydata-sphinx-theme",
    "sphinx-design",
    "nbsphinx>=0.8.0",
    "ipykernel",
    "jupyter",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
zip-safe = false
include-package-data = true
packages = {find = {exclude = ["data*", "docs*", "notebooks*", "test*"]}}

[tool.setuptools.package-data]
"acro" = ["default.yaml"]

[tool.ruff]
indent-width = 4
line-length = 88
target-version = "py310"

lint.select = [
  "ANN", # flake8-annotations
  "ARG", # flake8-unused-arguments
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "C90", # mccabe
  "D",   # pydocstyle
  "DTZ", # flake8-datetimez
  "E",   # pycodestyle
  "EM",  # flake8-errmsg
#  "ERA", # eradicate — 42 violations across tests/notebooks/source; cleanup follow-up
  "F",   # Pyflakes
  "I",   # isort
  "ICN",  # flake8-import-conventions
  "N",   # pep8-naming
  "PD",  # pandas-vet
  "PGH", # pygrep-hooks
  "PIE",  # flake8-pie
#  "PL",  # Pylint (use PLC/PLE/PLR/PLW individually)
  "PLC", # Pylint
  "PLE", # Pylint
  "PLR", # Pylint
  "PLW", # Pylint
  "PT",  # flake8-pytest-style
  "Q",   # flake8-quotes
  "RET", # flake8-return
  "RUF100",  # Ruff-specific
  "S",   # flake8-bandit
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "TID", # flake8-tidy-imports
  "UP",  # pyupgrade
  "W",   # pycodestyle
  "YTT",  # flake8-2020
]

exclude = [
  "__init__.py",
  "stata/*",
]

lint.ignore = [
  "ANN401",  # dynamically typed Any
  "E501",    # line too long — enforced by ruff formatter, redundant in linter
  "PD009",   # .iat vs .iloc — .iat is intentional for scalar access
  "PD010",   # .unstack vs .pivot_table — style preference
  "PD013",   # .stack vs .melt — style preference
  "PLR2004", # magic value comparison — ubiquitous in tests and parser constants
  "RET504",  # unnecessary assignment before return — aids readability/debugging
  "S101",    # assert usage — standard in tests and production invariant checks
  "S301",    # unsafe pickle — used intentionally in this project
]

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["ANN", "PD", "PLR0402", "PLR0913", "PLR5501", "SIM300", "T20"]
"notebooks/**" = ["E402", "PD", "T20"]
"acro/acro_stata_parser.py" = ["C901", "C417", "PLR5501", "T20"]
"acro/acro_tables.py" = ["EM", "PD002", "PD011", "PD101", "PLR0913", "PLR1714", "PLW2901", "SIM102", "SIM108"]
"acro/acro_regression.py" = ["B026"]
"acro/record.py" = ["DTZ005", "EM", "PLW2901", "T20"]
"acro/acro.py" = ["SIM113"]
"acro/utils.py" = ["PD002"]


[tool.ruff.lint.pylint]
max-args = 12
max-returns = 10

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["X", "X_train", "X_predict"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint]
extend-ignore = ["D213"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[tool.pylint]
master.py-version = "3.10"
reports.output-format = "colorized"

[tool.pylint.messages_control]
enable = [
    "useless-suppression",
]

disable = [
    "too-many-positional-arguments",
]

[tool.pylint.design]
max-args = 5  # Maximum number of arguments for function / method (see R0913).
max-attributes = 7  # Maximum number of attributes for a class (see R0902).
max-branches = 12  # Maximum number of branch for function / method body (see R0912).
max-locals = 15  # Maximum number of parents for a class (see R0914).
max-parents = 7  # Maximum number of parents for a class (see R0901).
max-public-methods = 20  # Maximum number of public methods for a class (see R0904).
max-returns = 6  # Maximum number of return / yield for function / method body (see R0911).
max-statements = 50  # Maximum number of statements in function / method body (see R0915).
min-public-methods = 2  # Minimum number of public methods for a class (see R0903).

[tool.pylint.format]
max-line-length = 100  # Maximum number of characters on a single line.
max-module-lines = 1000  # Maximum number of lines in a module.

[tool.mypy]
python_version = "3.10"
#exclude = "docs/source/conf.py"
#strict = false
#warn_unreachable = true
#ignore_missing_imports = true
#follow_imports = false
#disallow_untyped_defs = false
#disallow_untyped_calls = false
