[metadata]
name = acro
version = 0.4.5
description = ACRO: Tools for the Automatic Checking of Research Outputs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AI-SDC/ACRO
maintainer = Jim Smith
maintainer_email = james.smith@uwe.ac.uk
license = MIT
license_files = LICENSE.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Operating System :: OS Independent
keywords =
    data-privacy
    data-protection
    privacy
    privacy-tools
    statistical-disclosure-control
project_urls =
    Changelog = https://github.com/AI-SDC/ACRO/CHANGELOG.md
    Documentation = https://github.com/AI-SDC/ACRO/wiki
    Bug Tracker = https://github.com/AI-SDC/ACRO/issues
    Discussions = https://github.com/AI-SDC/ACRO/discussions

[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    lxml
    matplotlib
    numpy
    openpyxl
    pandas~=1.5.0
    PyYAML
    statsmodels

[options.extras_require]
doc =
    matplotlib==3.7.2
    numpy==1.23.1
    numpydoc==1.4.0
    pandas==1.5.0
    pytest==7.1.2
    PyYAML==6.0
    sphinx-autopackagesummary==1.3
    sphinx-gallery==0.10.1
    sphinx-issues==3.0.1
    sphinx-prompt==1.5.0
    sphinx-rtd-theme==1.0.0
    statsmodels==0.13.2

[options.package_data]
acro = default.yaml

[options.packages.find]
exclude =
    data*
    docs*
    notebooks*
    test*
